# celapp

./: celerybeat-schedule  pyproject.toml
celapp/: cel.yml  celery.py  rb.py  tasks.py
src/celery/: celery.py  rb.py  redbeat.yml  tasks.py
tests/: conftest.py  test_celery.py
